--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,15 @@
 }
 
 #leftnav{
- 	height: auto;
-    width: 308px;
-    position: fixed; 
-    z-index: 1; 
-    top: 0; 
-    left: 0;
-    overflow-x: hidden;
-	
+	height: 10000px;
+	/* [disabled]height: auto; */
+	width: 308px;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	overflow-x: hidden;
+	box-shadow: 1px 1px 10px gray;	
 }
 
 #sidenav{
