--- a/stylesheet.css
+++ b/stylesheet.css
@@ -123,6 +123,11 @@ main{
 	font-size: 40px;
 }
 
+.hero-text a{
+	 color: white;
+	text-decoration: none;
+}
+
 .hero-text {
     text-align: center;
     position: absolute;
