--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@
 	
 	margin-left: 50px;
 	padding-top: 20px;
-	width: 300px;
+	width: 100%;
 	
 }
 #sidenav h1 {
@@ -73,20 +73,21 @@ nav li a:hover{
 	color: white;
 	background-color: #3D4B72;
 	padding-left: 20px;
-	padding-right: 150px; 
+	padding-right: 100%; 
 	padding-top: 20px;
 	padding-bottom: 20px;
-	margin-left: -18px
+	margin-left: -18px;
+	
 }
 nav{
-	margin-left: 45px;
+	margin-left: 15%;
 	
 	
 }
 
 #social{
 
-	width: 200px;
+	width: 100%;
 	display: inline;
 padding:10px;
 	
@@ -210,7 +211,7 @@ font-family: roboto;
 
 #rowBottom, #rowBottom1{
 	clear: both;
-	padding: 5%;
+	padding: 1%;
 	border-top-width: 1px;
 	border-top-style: solid;
 	border-top-color: gray;
