--- a/VBredesign/stylesheets/contact_style.css
+++ b/VBredesign/stylesheets/contact_style.css
@@ -107,6 +107,10 @@ li a.image{
 	border-radius: 5px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
+	-webkit-transition-property:background;
+	-webkit-transition-duration: .3s;
+	-webkit-transition-timing-function: ease;
+	
 }
 .button:hover{
     background-color: #C14E4E; 
@@ -174,6 +178,10 @@ input[type=submit] {
     cursor: pointer;
 	 font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
+	-webkit-transition-property:background;
+	-webkit-transition-duration: .7s;
+	-webkit-transition-timing-function: ease;
+	
 }
 
 input[type=submit]:hover {
