--- a/VBredesign/stylesheets/index_style.css
+++ b/VBredesign/stylesheets/index_style.css
@@ -86,6 +86,10 @@ li img{
 	border-radius: 5px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
+	-webkit-transition-property:background;
+	-webkit-transition-duration: .7s;
+	-webkit-transition-timing-function: ease;
+	
 }
 .button:hover{
     background-color: #C14E4E; 
