--- a/VBredesign/stylesheets/index_style.css
+++ b/VBredesign/stylesheets/index_style.css
@@ -1,6 +1,9 @@
 /* CSS Document */
 
-
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 
 *,
 *:before,
@@ -67,7 +70,7 @@ li a:hover:not(.active) {
 }
 
 
-li img{
+li a.image{
 	padding-left: .5rem;
 	padding-top: .5rem;
 	padding-right: 50px;
