--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,57 @@
 /* CSS Document */
 
+
+
+
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+
+
+
+
+
 #shell{
 	
 }
+
+
 
 #leftnav{
 	height: auto;
@@ -98,7 +147,7 @@ padding:10px;
 }
 
 
-main{
+.maintest{
 
 
 	height: auto;
@@ -261,4 +310,18 @@ a:hover{
   }
 
 
+@media only screen and (max-width: 600px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+	.mobilehide {display:none;}
+	#leftnav {display: none;}
+	
+	.maintest {margin-left: 0px;
+		margin-right: 0;
+	
+	}
+}
 
+@media only screen and (min-width: 601px) {
+	.sidesideside {display: none;}
+}
