--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "Lato", sans-serif;
+	
 }
 
 .sidenav {
@@ -15,24 +16,32 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #eee;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+	
 }
 
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #2b2b2b;
     display: block;
     transition: 0.3s;
+	
+	
 }
+
+
 
 .sidenav a:hover {
     color: #f1f1f1;
+	background: #3D4B72;
 }
+
+
 
 .sidenav .closebtn {
     position: absolute;
