--- a/Frontend2/stylesheets/index_style.css
+++ b/Frontend2/stylesheets/index_style.css
@@ -153,6 +153,15 @@ h4{
 	
 
 }
+h3{
+	
+	color: #3b3b3b;
+  font-family: 'Open Sans', sans-serif;
+	font: 200;
+	
+	
+
+}
 p {
   color: #2B2B2B;
   font-family: 'Open Sans', sans-serif;
