--- a/frontend/stylesheets/quiz2.css
+++ b/frontend/stylesheets/quiz2.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body{
-	background-image: url("../../assets/mainbridge.jpg");
+	background-image: url("/frontend/assets/arches.jpg");
  /* Full height */
   height: 100%; 
 
