--- a/frontend/stylesheets/final.css
+++ b/frontend/stylesheets/final.css
@@ -1,29 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
-/* Override UGG site */
-#main {
-    width: 100%;
-    padding:0;
-}
-.content-asset p {
-    margin:0 auto;
-}
-.breadcrumb {
-    display:none;
-}
 
-/* Helpers */
-/**************************/
-.margin-top-10 {
-    padding-top:10px;
-}
-.margin-bot-10 {
-    padding-bottom:10px;
-}
 
-/* Typography */
-/**************************/
+/* Text and stuff */
 #parallaxfinal h1 {
     font-family:'Oswald', sans-serif; 
     font-size:24px; 
@@ -55,7 +35,7 @@
     
 }
 
-#parallaxfinal .parallax-one h3, #parallaxfinal .parallax-two h3, #parallaxfinal .parallax-three h3 {
+#parallaxfinal .parallax-one h3, #parallaxfinal .parallax-two h3, #parallaxfinal .parallax-three h3, #parallaxfinal .parallax-four h3, #parallaxfinal .parallax-five h3, #parallaxfinal .parallax-six h3 {
     font-family:'Oswald', sans-serif;
     font-size:20px; 
     line-height:0;
@@ -83,12 +63,11 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.sc {color: #3b8595;}
-.ny {color: #3d3c3a;}
-.atw {color: #c48660;}
+.a1 {color: #3b8595;}
+.a2 {color: #3b8595;}
+.a3 {color: #3b8595;}
 
-/* Section - Title */
-/**************************/
+/* HEADER AREA */
 #parallaxfinal .title {
     background: white;
     padding: 60px; margin:0 auto;
@@ -99,8 +78,7 @@
     letter-spacing:8px;
 }
 
-/* Section - Block */
-/**************************/
+/* WRITING AREA */
 #parallaxfinal .block {
     background: white;
     padding: 60px; 
@@ -122,8 +100,7 @@
     opacity: 0.70;
 }
 
-/* Section - Parallax */
-/**************************/
+/* Parallax Background Images */
 #parallaxfinal .parallax-one {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -157,7 +134,7 @@
     overflow: hidden;
     position: relative; 
     width: 100%;
-    background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=);
+    background-image: url(https://images.pexels.com/photos/1287365/pexels-photo-1287365.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     background-attachment: fixed;
     background-size: cover;
     -moz-background-size: cover;
@@ -165,34 +142,89 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
-
-/* Extras */
-/**************************/
+#parallaxfinal .parallax-four {
+    padding-top: 200px; 
+    padding-bottom: 200px;
+    overflow: hidden;
+    position: relative; 
+    width: 100%;
+    background-image: url(https://images.pexels.com/photos/356378/pexels-photo-356378.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#parallaxfinal .parallax-five {
+    padding-top: 200px; 
+    padding-bottom: 200px;
+    overflow: hidden;
+    position: relative; 
+    width: 100%;
+    background-image: url(https://images.pexels.com/photos/516541/pexels-photo-516541.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#parallaxfinal .parallax-six{
+    padding-top: 200px; 
+    padding-bottom: 200px;
+    overflow: hidden;
+    position: relative; 
+    width: 100%;
+    background-image: url(https://images.pexels.com/photos/248280/pexels-photo-248280.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+/* other stuff */
 #parallaxfinal .line-break {
     border-bottom:1px solid black; 
     width: 150px; 
     margin:0 auto;
 }
 
-/* Media Queries */
-/**************************/
-@media screen and (max-width: 959px) and (min-width: 768px) {
-  #parallaxfinal .block {
-      padding: 40px;
-      width:620px;
-     }
+.footer {
+  position: relative;
+    margin-top: 10%;
+    padding: 5px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #3b8595;
+  color: white;
+  text-align: center;
 }
-@media screen and (max-width: 767px) {
-  #parallaxfinal .block {padding: 30px; width:420px;}
-  #parallaxfinal h2 {font-size:30px;}
-  #parallaxfinal .block {padding: 30px;}
-  #parallaxfinal .parallax-one, #parallaxfinal .parallax-two, #parallaxfinal .parallax-three {
-      padding-top:100px; 
-      padding-bottom:100px;
-    }
+.footer h4 {
+    font-family:'Source Sans Pro', sans-serif;
+    font-weight:900; 
+    font-size:14px;
+    
+    margin-bottom: -20px;
 }
-@media screen and (max-width: 479px) {
-  #parallaxfinal .block {padding: 30px 15px;
-      width:290px;
-    }
+
+.footer p, .footer a {
+    font-family:'Source Sans Pro', sans-serif;
+    font-weight:400; 
+    font-size:14px;
+    line-height:24px;
+    letter-spacing:5px;
+    text-decoration: none;
+    color: white;
 }
+
+.footer a:hover {
+    font-family:'Source Sans Pro', sans-serif;
+    font-weight:400; 
+    font-size:14px;
+    line-height:24px;
+    letter-spacing:5px;
+    text-decoration: underline;
+    color: white;
