--- a/frontend/stylesheets/final.css
+++ b/frontend/stylesheets/final.css
@@ -9,7 +9,7 @@
 
 
 
-/* Text and stuff */
+/* Text and stuff IGEOR, Can you add the rest of the text css? */
 #parallaxfinal h1 {
     font-family:'Oswald', sans-serif; 
     font-size:24px; 
