--- a/frontend/stylesheets/final.css
+++ b/frontend/stylesheets/final.css
@@ -4,8 +4,9 @@
 
 #main {width: 100%; padding:0;}
 
-.margin-top-10 {padding-top:10px;}
-.margin-bot-10 {padding-bottom:10px;}
+.margin1 {padding-top:10px;}
+
+
 
 
 
@@ -90,7 +91,7 @@ text-align:center;
 }
 
 .nav a {
-  display: inline-block;
+  display: inline-group;
   color: black;
   text-align: center;
   padding: 14px;
@@ -102,19 +103,22 @@ text-align:center;
 .nav a:hover {
   background-color: #3b8595;
   color: white;
+    -webkit-transition-property:background;
+	-webkit-transition-duration: .7s;
+	-webkit-transition-timing-function: ease;
 }
 
 
 
 /* WRITING AREA */
-#parallaxfinal .block {
+#parallaxfinal .group {
     background: white;
     padding: 60px; 
     width:80%; 
     margin:auto;
     text-align:justify;
 }
-#parallaxfinal .block-gray {
+#parallaxfinal .group-gray {
     background: #f2f2f2;
     padding: 60px;
 }
@@ -214,8 +218,8 @@ text-align:center;
 }
 /* other stuff */
 #parallaxfinal .line-break {
-    border-bottom:1px solid black; 
-    width: 150px; 
+    border-bottom:2px solid #3b8595; 
+    width: 300px; 
     margin:0 auto;
 }
 
@@ -261,11 +265,11 @@ text-align:center;
     /* Media Queries */
 /**************************/
 @media only screen and (max-width: 959px) and (min-width: 768px) {
-  #parallaxfinal .block {padding: 40px; width:620px;}
+  #parallaxfinal .group {padding: 40px; width:620px;}
 }
 @media only screen and (max-width: 767px) {
-  #parallaxfinal .block {padding: 30px; width:420px;}
-  #parallaxfinal .block {padding: 30px;}
+  #parallaxfinal .group {padding: 30px; width:420px;}
+  #parallaxfinal .group {padding: 30px;}
   #parallaxfinal .parallax-one, #parallaxfinal .parallax-two, #parallaxfinal .parallax-three {padding-top:100px; padding-bottom:100px;}
     .nav {
 text-align:center;
@@ -274,12 +278,12 @@ text-align:center;
 }
 
 .nav a {
-  display: block;
+  display: group;
   color: black;
   padding: 16px;
   text-decoration: none;
 }
 }
 @media only screen and (max-width: 479px) {
-  #parallaxfinal .block {padding: 30px 15px; width:290px;}
+  #parallaxfinal .group {padding: 30px 15px; width:290px;}
 }
